--- a/waybar/style.css
+++ b/waybar/style.css
@@ -3,6 +3,7 @@
     border-radius: 0;
     font-family: "CaskaydiaCove Nerd Font";
     font-size: 13px;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
     min-height: 0;
 }
 
