--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: "CaskaydiaCove Nerd Font";
+  font-family: "CaskaydiaCove NF";
   font-size: 13px;
   text-shadow:
     1px 0 0 #000,
@@ -18,7 +18,7 @@ window#waybar {
 
 #window {
   font-weight: bold;
-  font-family: "CaskaydiaCove Nerd Font";
+  font-family: "CaskaydiaCove NF";
 }
 
 #workspaces button {
